--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,7 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap/scss/bootstrap";
 @import "components/navbar";
-@import "global"
+@import "global";
+@import "articles"
