--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,3 +1,12 @@
 body {
   margin: 0;
+  a {
+    text-decoration: none;
+    color:inherit;
+  }
+  a:hover{
+    font-weight: bold;
+    text-decoration: none;
+    color:inherit;
+  }
 }
