--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
 <%= simple_form_for @article do |f|%>
 <%= f.input :title %>
 <%= f.input :content,  input_html: {class: "input-for-article-text"}%>
 <%= f.input :category %>
-<%= f.submit "submit" %>
+<%= f.submit "Edit" %>
 <% end %>
+</div>
