--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,6 @@
-<h1>Articles#new</h1>
-<p>Find me in app/views/articles/new.html.erb</p>
+
+<h1>Create a new article</h1>
+
 <%= simple_form_for @article do |f|%>
 <%= f.input :title %>
 <%= f.input :content %>
