--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,26 @@
-nothing
+<div class="container">
+  <div class="home-banner">
+    <div class="banner-text-box">
+      <h1>Learning to code bit by bit</h1>
+      <h4>Articles. Tutorials. Libraries</h2>
+    </div>
+    <div class="home-banner-img">
+      <img src="" alt="">
+    </div>
+  </div>
+  <section class="home-section">
+    <div class="card-left">
+    <%# <img src="" alt=""> image of article %>
+    <div class="article-info">
+      <div class="info-line-small">
+        <p>Author</p>
+        <p>Jan 01 01 2022</p>
+        <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
+        <p>5</p>
+      </div>
+    </div>
+    </div>
+    <div class="card-right">
+    </div>
+  </section>
+</div>
