--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.home-banner{
+  display: flex;
+.banner-text-box{
+  display: flex;
+  flex: 2;
+  flex-direction: column;
+}
+
+}
