--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,8 @@
 .navbar-container{
   display: flex;
-  width: 100vw;
+  width: 90vw;
   justify-content: space-between;
-
+  margin:10px auto;
   a {
     height:max-content;
     margin:auto;
