--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,20 +1,50 @@
+//  general card classes
+.card-vertical{
+  display:flex;
+  align-items: center;
+}
+
+// index cards
 .cards-holder{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 15px;
+  grid-gap: 80px;
+  margin: 40px 0px
 }
 .card-container{
-  box-shadow: 0px 0px 10px 1px lightgrey;
-  border-radius:8px;
-  transition:0.5s;
-  height: 300px;
-  padding: 5px;
-  &:hover{
-    transform: scale(1.01);
+  a:hover{
+    font-weight: normal;
   }
-  .article-content{
-    max-height:125px;
-    overflow:hidden;
-    border-bottom: 1px solid black;
+  height:360px;
+  display:flex;
+  flex-direction: column;
+  position:relative;
+  .img-holder{
+    height:180px;
+    width:100%;
   }
+}
+
+.card-content{
+  h3{
+    font-size: 24px;
+  }
+  display:flex;
+  flex-direction: column;
+  padding:20px 0px;
+}
+
+.info-line-small{
+  width:100%;
+  display:flex;
+  justify-content: start;
+  color:var(--blue);
+  p,span{
+    margin-right:10px;
+  }
+}
+
+.card-image{
+  width:100%;
+  height:100%;
 }
