--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -9,9 +9,13 @@
   --normal-size-text:16px;
   --smaller-text:20px;
 }
-
+.container{
+  margin:45px auto;
+  width:80vw;
+}
 body {
   margin: 0;
+  background-color: var(--whitish);
   a {
     text-decoration: none;
     color:inherit;
@@ -26,11 +30,46 @@ body {
     color: var(--dark-blue);
     font-size: var(--banner-size-heading);
   }
-
+  h3 {
+    color: var(--dark-blue);
+    font-size: var(--heading);
+  }
+  h2{
+    color:var(--dark-blue);
+    font-size:var(--big-heading)
+  }
   h4{
     color: var(--blue);
     font-size: var(--normal-size-text);
   }
+  h5{
+    color:var(--dark-blue);
+    font-size: var(--normal-size-text);
+  }
+  ul{
+    padding:0px;
+    & > li{
+      list-style: none;
+    }
+  }
+}
+
+.bold-blue{
+  color:var(--blue);
+  font-size: var(--normal-size-text);
+  font-weight: bold;
+}
+.bold-blue:hover{
+  color: var(--dark-blue)
+}
+
+.bold-white{
+  color:var(--whitish);
+  font-size: var(--normal-size-text);
+  font-weight: bold;
+}
+.bold-white:hover{
+  color: var(--blue);
 }
 
 .btn-normal{
@@ -48,4 +87,61 @@ body {
 }
 .btn-normal:hover{
   background-color:var(--dark-blue);
+}
+
+.short-line{
+  height:1px;
+  width:100px;
+  background-color: var(--dark-blue);
+  ;
+}
+.longer-line{
+  height:1px;
+  width:330px;
+  background-color: var(--dark-blue);
+  ;
+}
+
+.bottom-right{
+  position:absolute;
+  right:0px;
+  bottom:0px;
+  text-align: end;
+  p{
+    margin-bottom:0;
+  }
+}
+
+.img-holder{
+  position:relative;
+}
+ .img-overlay{
+      width: 100%;
+      height: 100%;
+      background-color: var(--dark-blue);
+      opacity: 0.3;
+      position:absolute;
+      left:0;
+      top:0;
+      z-index:2;
+    }
+
+    // linebar
+
+    .line-bar{
+      display:flex;
+      justify-content: space-between;
+      .bar-section{
+        display:flex;
+        align-items:center;
+        gap:24px;
+      }
+       p{
+   margin-bottom:0;
+ }
+    }
+
+  .inner-content{
+  margin:24px;
+  position:relative;
 }
