--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -4,10 +4,39 @@
 
 .home-banner{
   display: flex;
-.banner-text-box{
-  display: flex;
-  flex: 2;
-  flex-direction: column;
+  height:80vh;
+  align-items: center;
+  .banner-text-box{
+    display: flex;
+    flex: 2;
+    flex-direction: column;
+  }
 }
 
+.home-section{
+  position:relative;
+  display:flex;
+  flex-direction: column;
+  .card-left{
+    display:flex;
+    gap: 80px;
+    margin: 40px 0px 70px;
+    .img-holder{
+      width: 330px;
+      height: 230px;
+    }
+    .img{
+      width: 330px;
+      height: 230px;
+    }
+    .article-info{
+      position:relative;
+      flex:2;
+      display:flex;
+      flex-direction: column;
+      align-items:flex-end;
+      gap:10px;
+      justify-content: flex-start;
+    }
+  }
 }
