--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,56 @@
-<div class="container">
-  <h1>Articles</h1>
+
+  <div class="filter-bar line-bar">
+    <div class="bar-section">
+    <span><%= image_tag "Filter-icon.svg", class:"filter-icon" %></span>
+    <p>Category</p>
+    <div class="filter-group">
+    <span><%= image_tag "JS-icon.svg", class:"filter-icon" %></span>
+    <span><%= image_tag "Ruby-icon.svg", class:"filter-icon" %></span>
+    <span><%= image_tag "Rails-icon.svg", class:"filter-icon" %></span>
+    </div>
+    </div>
+    <div class="bar-section">
+      <span><%= image_tag "Sort-up-icon.svg", class:"filter-icon" %></span>
+    </div>
+  </div>
+<div class="page-section">
+
+
+  <h2>Most recent</h1>
+  <div class="longer-line"></div>
+
   <div class="cards-holder">
+
     <% @articles.each do |article| %>
+
       <div class="card-container">
-        <img src="" alt="">
-        <div class="card-content">
-          <div class="card-content-main">
             <%= link_to article_path(article) do %>
-              <h2><%= article.title %></h2>
-            <% end %>
-              <div class="article-content">
-                <%= article.content %>
-              </div>
+        <div class="img-holder">
+          <%= image_tag "Sample.jpg", class: "card-image" %>
+          <div class="img-overlay"></div>
+        </div>
+        <div class="card-content">
+
+          <div class="info-line-small">
+            <p>Author</p>
+            <p>Jan 01/01/2022</p>
+            <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
+            <p>5</p>
           </div>
-          <div class="card-content-foot">
-              <%= article.category %>
+
+          <div class="card-content-main">
+              <h3><%= article.title %></h3>
+          </div>
+          <div class="bottom-right">
+            <div class="short-line">
+            </div>
+              <p><%= article.category %></p>
           </div>
         </div>
+            <% end %>
       </div>
     <% end %>
   </div>
-  <%=  link_to "Add", articles_new_path %>
 </div>
+
+  <%=  link_to "Add", articles_new_path %>
