--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
   <div class="home-banner">
     <div class="banner-text-box">
       <h1>Learning to code bit by bit</h1>
@@ -9,18 +8,51 @@
     </div>
   </div>
   <section class="home-section">
+    <h2>Blog</h2>
+    <div class="longer-line"></div>
+  <%# blog card %>
     <div class="card-left">
-    <%# <img src="" alt=""> image of article %>
-    <div class="article-info">
-      <div class="info-line-small">
-        <p>Author</p>
-        <p>Jan 01 01 2022</p>
-        <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
-        <p>5</p>
+      <div class="img-holder">
+         <%= image_tag "Sample.jpg", class: "card-image" %>
+        <div class="img-overlay"></div>
+      </div>
+      <div class="article-info">
+        <div class="info-line-small">
+          <p>Author</p>
+          <p>Jan 01/01/2022</p>
+          <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
+          <p>5</p>
+        </div>
+        <h3>5 array methods everyone should know by heart</h3>
+        <div class="bottom-right">
+          <div class="short-line"></div>
+          <p>Category</p>
+        </div>
       </div>
     </div>
+    <%# end of blog card %>
+     <div class="card-left">
+      <div class="article-info">
+        <div class="info-line-small">
+          <p>Author</p>
+          <p>Jan 01/01/2022</p>
+          <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
+          <p>5</p>
+        </div>
+        <h3>5 array methods everyone should know by heart</h3>
+        <div class="bottom-right">
+          <div class="short-line"></div>
+          <p>Category</p>
+        </div>
+      </div>
+      <div class="img-holder">
+        <div class="img-overlay"></div>
+        <%= image_tag "Sample.jpg", class: "card-image" %>
+      </div>
     </div>
-    <div class="card-right">
+
+    <div class="expand-section-btn bottom-right">
+      <%= link_to "More..", articles_path, class: "bold-blue" %>
     </div>
+
   </section>
-</div>
