created a User model, controller, sign_up method and link on homepage

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,9 @@
   <%# else %>
     <div class="nav-link">
       <div class="btn-normal">
+      <%= link_to signup_path do %>
         <p>Log in</p>
+        <% end %>
       </div>
     </div>
   <%# end %>
