--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="form-container">
+  <%= simple_form_for @user do |f|  %>
+  <%= f.input :username %>
+  <%= f.input :email %>
+  <%= f.input :password %>
+  <%= f.input :password_confirmation, required: true %>
+  <%= f.button :submit, class: "btn-normal btn-centered" %>
+  <%end  %>
+</div>
