basic login log out functionality

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
   <%# else %>
     <div class="nav-link">
       <div class="btn-normal">
-      <%= link_to signup_path do %>
+      <%= link_to login_path do %>
         <p>Log in</p>
         <% end %>
       </div>
