--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
     <div class="article-head-text">
       <div class="info-line-small">
                 <p><%= @article.user.username %></p>
-                <p><<%= @article.created_at %>/p>
+                <p><%= @article.created_at %></p>
                 <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
                 <p>5</p>
       </div>
@@ -25,10 +25,9 @@
   <div class="article-resources">
     <h5>Useful resources</h5>
     <ul>
-      <li><a href="#">Some super useful link</a></li>
-      <li><a href="#">Some super useful link</a></li>
-      <li><a href="#">Some super useful link</a></li>
-      <li><a href="#">Some super useful link</a></li>
+    <% @article_resources.each do |article_resource| %>
+      <li><a href="<%=article_resource.link%>"><%= article_resource.title %></a></li>
+    <% end %>
     </ul>
     <div class="expand-section-btn bottom-right">
         <%= link_to "More..", articles_path, class: "bold-blue" %>
