added resources since they got lost and adjusted views for logged in user

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,11 +22,15 @@
   <%# <div class="nav-dropdown dropdown-open"></div> %>
   <%# else %>
     <div class="nav-link">
+  <% if !current_user %>
       <div class="btn-normal">
       <%= link_to login_path do %>
         <p>Log in</p>
         <% end %>
       </div>
+      <% else %>
+      <%= image_tag "person.svg" %>
+    <% end %>
     </div>
   <%# end %>
     <%# </div> %>
