adjusted the view for logedin user added a llink to user profile to navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,9 @@
         <% end %>
       </div>
       <% else %>
+      <%= link_to user_path(current_user) do %>
       <%= image_tag "person.svg" %>
+    <% end %>
     <% end %>
     </div>
   <%# end %>
