adjusted article new form, added remove resource btn icon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,6 @@
 @import "bootstrap/scss/bootstrap";
 @import "components/navbar";
 @import "global";
-@import "articles"
+@import "articles";
+@import "font-awesome-sprockets";
+@import "font-awesome";
