--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -22,3 +22,11 @@
 .btn-normal:hover{
   background-color:var(--dark-blue);
 }
+
+.btn-icon{
+  color:var(--blue);
+  cursor:pointer;
+  &:hover{
+    color:var(--dark-blue)
+  }
+}
