added action text to create new blogpost

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,5 +17,7 @@
 @import "components/navbar";
 @import "global";
 @import "articles";
+@import "components/actiontext";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "trix/dist/trix"
