--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,7 +20,7 @@
 
   <div class="article-content">
     <h5><%= @article.subtitle %></h5>
-    <p><%= @article.content %></p>
+    <%= @article.rich_body %>
   </div>
   <div class="article-resources">
     <h5>Useful resources</h5>
