--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,7 @@
 <%= simple_form_for @article do |f|%>
 <%= f.input :title %>
 <%= f.input :subtitle %>
-<%= f.input :content %>
+<%= f.rich_text_area :rich_body %>
 <%= f.input :category %>
 <h5>Resources</h5>
 <%= f.simple_fields_for :resources do |resource| %>
