added feature test user creates article

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -19,5 +19,5 @@
     <div id="addResource" class="p-2 btn-icon"><i class="fas fa-plus"></i> Add another resource</div>
     <div id="removeResource" class="p-2 btn-icon"><i class="fas fa-trash-alt"></i></div>
   </div>
-  <%= f.submit "submit", class: "btn-normal" %>
+  <%= f.submit "Post", class: "btn-normal" %>
 <% end %>
