--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,31 +18,32 @@
       </div>
       <div class="article-info">
         <div class="info-line-small">
-          <p>Author</p>
-          <p>Jan 01/01/2022</p>
+          <p><%=@article_newest.user.username %></p>
+          <p><%= @article_newest.created_at.strftime("%d-%m-%Y") %></p>
           <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
           <p>5</p>
         </div>
-        <h3>5 array methods everyone should know by heart</h3>
+        <h3><%= @article_newest.title %></h3>
         <div class="bottom-right">
           <div class="short-line"></div>
-          <p>Category</p>
+          <p><%= @article_newest.category %></p>
         </div>
       </div>
     </div>
     <%# end of blog card %>
      <div class="card-left">
+     <%= %>
       <div class="article-info">
         <div class="info-line-small">
-          <p>Author</p>
-          <p>Jan 01/01/2022</p>
+          <p><%= @article_second_newest.user.username %></p>
+          <p><%= @article_second_newest.created_at.strftime("%d-%m-%Y") %></p>
           <span><%= image_tag "Comment-icon.svg", class: "icon-small" %></span>
           <p>5</p>
         </div>
-        <h3>5 array methods everyone should know by heart</h3>
+        <h3><%= @article_second_newest.title %></h3>
         <div class="bottom-right">
           <div class="short-line"></div>
-          <p>Category</p>
+          <p><%= @article_second_newest.category %></p>
         </div>
       </div>
       <div class="img-holder">
