added growing text field functionality to the action text in new article

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -75,7 +75,7 @@
     text-align: left;
 
     trix-editor{
-      height:500px;
+      min-height:500px;
       resize:vertical;
       text-align:left;
       margin-bottom:1rem;
