added more user-log in tests

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,7 +30,7 @@
       </div>
       <% else %>
       <%= link_to user_path(current_user) do %>
-      <%= image_tag "person.svg" %>
+      <%= image_tag "person.svg", class: "user-icon", alt: "user-icon" %>
     <% end %>
     <% end %>
     </div>
