--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,11 @@
     <%= link_to "Learning", root_path, class:"nav-link-text" %>
     </div>
     <div class="nav-link">
+    <%= form_tag articles_path, method: :get do  %>
+    <%= text_field_tag :query,
+    params[:query] %>
+    <%= submit_tag "Search", style: "display:none" %>
+    <% end %>
     <%= image_tag "Search-icon.svg", alt: "search-icon" %>
     </div>
     <%# if user.logged_in? %>
