added banner image

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <h4>Articles. Tutorials. Libraries</h2>
     </div>
     <div class="home-banner-img">
-      <img src="" alt="">
+      <%= image_tag "codepoco_illustration.png" %>
     </div>
   </div>
   <section class="home-section">
