--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -17,8 +17,17 @@
    margin:0px 5px;
    span{
      padding:5px;
+   };
+   > .filter-boxes label{
+     position:relative;
    }
+  > .filter-boxes input{
+    visibility: hidden;
+    position: absolute;
+
+  }
  }
+
 }
 
 // article show
