--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Create a new article</h1>
 
-<%= simple_form_for @article, method: :put do |f|%>
+<%= simple_form_for @article, method: :patch do |f|%>
   <%= f.input :title %>
   <%= f.input :subtitle %>
   <%= f.rich_text_area :rich_body %>
