--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,11 +6,11 @@
     <div class="filter-group">
     <%= form_with url: articles_path, method: :get , class: "filter-boxes" do |f| %>
     <span><%= f.label :filter_option1, image_tag("JS-icon.svg", class:"filter-icon") %></span>
-        <%= check_box_tag :filter_option, :TDD, false , id: "filter_option1",onchange: "this.form.submit()"%>
+        <%= check_box_tag :filter_option, :JS, false , id: "filter_option1",onchange: "this.form.submit()"%>
       <span><%= f.label :filter_option2, image_tag("Ruby-icon.svg", class:"filter-icon") %></span>
         <%= check_box_tag :filter_option, :Test, false, id:"filter_option2", onchange: "this.form.submit()" %>
       <span><%= f.label :filter_option, image_tag("Rails-icon.svg", class:"filter-icon") %></span>
-        <%= check_box_tag :filter_option, :ruby, false, onchange: "this.form.submit()" %>
+        <%= check_box_tag :filter_option, :Ruby, false, onchange: "this.form.submit()" %>
     <% end %>
     <span> <%= link_to "Remove filters", articles_path %></span>
     </div>
